# desks_booking

./: docker-compose.yaml
backend/: .gitignore  Dockerfile  README.MD  conftest.py  pyproject.toml
backend/booking/: admin.py  models.py  serializers.py  urls.py  views.py
backend/booking/migrations/: 0001_initial.py
backend/booking/tests/: test_models.py
backend/config/: settings.py  urls.py
backend/users/migrations/: 0001_initial.py  0002_superuser.py
