[tool.poetry]
name = "desks-booking"
version = "0.1.0"
description = ""
authors = ["Bartosz Baran <bartosz.baran192@gmail.com>"]
license = "Beerware"
readme = "README.md"
packages = [{include = "desks_booking"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
